Add DruidContainers to run docker tests with embedded-test framework (#18302)
Summary:
- Support running Druid Docker containers in embedded tests
- Use the Druid distribution image for these containers rather than a test-only image as previously done by ITs
- Add a `CliEventCollector` to monitor the containers and write efficient tests
- Run new job `docker-tests` in GHA which runs a few Docker-based tests